apps/base/n8n/ingressroute-internal.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: n8n-internal
  namespace: apps
spec:
  entryPoints:
    - websecure-int
  routes:
    - match: Host(`n8n.local.kagiso.me`)
      kind: Rule
      middlewares:
        - name: ingress-secure-headers@kubernetescrd
      services:
        - name: n8n
          port: 5678
  tls:
    secretName: wildcard-kagiso-me-tls
